--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dart.flutterSdkPath": "/Users/mrn/Development/Projects/FlutterProjects/yenehealth_mobile/.fvm/versions/3.24.3"
+    "dart.flutterSdkPath": "/home/adilansari/Development/flutter/bin"
 }
