--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,24 +9,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
   cupertino_icons: ^1.0.2
   introduction_screen: ^3.1.12
   uuid: ^4.2.1
-  riverpod_annotation: ^4.0.2
-  shared_preferences: ^2.5.4
-  freezed_annotation: ^3.1.0
-  json_annotation: ^4.9.0   # 🔽 DOWNGRADED
+
+  riverpod_annotation: ^3.0.0
+  hooks_riverpod: ^3.0.0
   flutter_hooks: ^0.21.3+1
-  hooks_riverpod: ^3.2.1
+
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   flutter_lints: ^2.0.0
 
   build_runner: ^2.4.8
-  freezed: ^3.1.0
-  json_serializable: ^6.8.0  # 🔽 DOWNGRADED
+  freezed: ^3.0.0
+  json_serializable: ^6.8.0
+  riverpod_generator: ^3.0.0
 
 flutter:
   uses-material-design: true
